--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,11 @@
   <title>Revived Character Sheet</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <!-- Castle by Ian Rahmadi Kurniawan from the Noun Project
+   https://thenounproject.com/search/?q=castle&i=3366556 -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
