--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Revived Character Sheet</title>
+  <title>Primeval Arcana Character Sheet</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+
   <!-- Castle by Ian Rahmadi Kurniawan from the Noun Project
    https://thenounproject.com/search/?q=castle&i=3366556 -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
