--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Primeval Arcana Interactive Character Sheet</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#1a1410">
 
   <!-- Castle by Ian Rahmadi Kurniawan from the Noun Project
    https://thenounproject.com/search/?q=castle&i=3366556 -->
